k8s/namespaces/media/wizarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wizarr
  namespace: media
  labels:
    app.kubernetes.io/name: wizarr
spec:
  selector:
    app.kubernetes.io/name: wizarr
  ports:
    - port: 5690
      targetPort: 5690
      protocol: TCP
      name: wizarr
  type: ClusterIP
