k8s/namespaces/media/wizarr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wizarr-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wizarr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: authentik
          namespace: traefik
      services:
        - name: wizarr
          port: 5690
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wizarr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`wizarr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: wizarr
          port: 5690
